[package]
name = "simbox"
version = "0.1.0"
edition = "2021"
authors = ["Cesar Ferreira <cesar.manuel.ferreira@gmail.com>"]
description = "A CLI tool for managing iOS simulators"
license = "MIT"
repository = "https://github.com/cesarferreira/simbox"
homepage = "https://github.com/cesarferreira/simbox"
readme = "README.md"

[[bin]]
name = "simbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
