[package]
name = "simu"
version = "0.1.0"
edition = "2021"
authors = ["Cesar Ferreira <cesar.manuel.ferreira@gmail.com>"]
description = "A CLI tool for managing iOS simulators"
license = "MIT"
repository = "https://github.com/cesarferreira/simu"
homepage = "https://github.com/cesarferreira/simu"
readme = "README.md"

[[bin]]
name = "simu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
inquire = "0.6.2"
